@@ -2,9 +2,7 @@ package io.intino.konos.builder.codegeneration.services.messaging;
 
 import io.intino.itrules.Frame;
 import io.intino.itrules.FrameBuilder;
-import io.intino.itrules.Template;
 import io.intino.konos.builder.OutputItem;
-import io.intino.konos.builder.codegeneration.Formatters;
 import io.intino.konos.builder.codegeneration.Renderer;
 import io.intino.konos.builder.codegeneration.action.MessagingRequestActionRenderer;
 import io.intino.konos.builder.codegeneration.services.ui.Target;
@@ -19,7 +17,6 @@ import io.intino.konos.dsl.Service.Messaging.Request;
 
 import java.io.File;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static cottons.utils.StringHelper.snakeCaseToCamelCase;
 import static io.intino.konos.builder.helpers.Commons.javaFile;
@@ -31,7 +28,7 @@ public class MessagingRequestRenderer extends Renderer {
 
 	public MessagingRequestRenderer(CompilationContext compilationContext, KonosGraph graph) {
 		super(compilationContext);
-		this.services = graph.serviceList(Service::isMessaging).map(Service::asMessaging).collect(Collectors.toList());
+		this.services = graph.serviceList(Service::isMessaging).map(Service::asMessaging).toList();
 	}
 
 	@Override
@@ -45,7 +42,7 @@ public class MessagingRequestRenderer extends Renderer {
 
 	private void processRequest(Request request) throws KonosException {
 		File packageFolder = new File(gen(Target.Server), REQUESTS);
-		writeFrame(packageFolder, snakeCaseToCamelCase(request.name$()) + "Request", template().render(fillRequestFrame(request)));
+		writeFrame(packageFolder, snakeCaseToCamelCase(request.name$()) + "Request", new MessagingRequestTemplate().render(fillRequestFrame(request)));
 		context.compiledFiles().add(new OutputItem(context.sourceFileOf(request), javaFile(packageFolder, snakeCaseToCamelCase(request.name$()) + "Request").getAbsolutePath()));
 		createCorrespondingAction(request);
 	}
@@ -89,7 +86,4 @@ public class MessagingRequestRenderer extends Renderer {
 				.add("type", parameter.asType().type()).toFrame();
 	}
 
-	private Template template() {
-		return Formatters.customize(new MessagingRequestTemplate());
-	}
 }
